--- a/flutter/app/pubspec.yaml
+++ b/flutter/app/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   image_picker: ^1.0.4
   shared_preferences: ^2.2.2
   audioplayers: ^5.2.1
+  video_player: ^2.8.1
+  share_plus: ^7.2.1
+  youtube_player_flutter: ^8.1.2
 
 dev_dependencies:
   flutter_test:
