--- a/flutter/app/pubspec.yaml
+++ b/flutter/app/pubspec.yaml
@@ -31,6 +31,9 @@ dependencies:
   flutter:
     sdk: flutter
   google_fonts: ^6.1.0
+  dio: ^5.4.0
+  kakao_flutter_sdk_user: ^1.6.1
+  google_sign_in: ^6.2.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
