--- a/flutter/app/android/app/src/main/AndroidManifest.xml
+++ b/flutter/app/android/app/src/main/AndroidManifest.xml
@@ -1,4 +1,5 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
     <!-- 인터넷 권한 추가 -->
     <uses-permission android:name="android.permission.INTERNET"/>
 
@@ -7,6 +8,7 @@
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
 
+        <!-- 🆕 메인 Activity (카카오 스키마 제거) -->
         <activity
             android:name=".MainActivity"
             android:exported="true"
@@ -16,21 +18,29 @@
             android:hardwareAccelerated="true"
             android:windowSoftInputMode="adjustResize">
 
-            <!-- 카카오 로그인을 위한 인텐트 필터 추가 -->
-            <intent-filter android:autoVerify="true">
-                <action android:name="android.intent.action.VIEW" />
-                <category android:name="android.intent.category.DEFAULT" />
-                <category android:name="android.intent.category.BROWSABLE" />
-                <data android:scheme="kakao6240e72db33e4ae36f4920a200335220" />
-            </intent-filter>
-
             <meta-data
                 android:name="io.flutter.embedding.android.NormalTheme"
                 android:resource="@style/NormalTheme"
                 />
+
+            <!-- 🆕 메인 런처 인텐트 필터만 유지 -->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
+            </intent-filter>
+        </activity>
+
+        <!-- 🆕 카카오 로그인 전용 Activity 추가 (충돌 해결) -->
+        <activity
+            android:name="com.kakao.sdk.flutter.AuthCodeCustomTabsActivity"
+            android:exported="true"
+            android:launchMode="singleTop"
+            tools:replace="android:launchMode">
+            <intent-filter android:label="flutter_web_auth">
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+                <data android:scheme="kakao6240e72db33e4ae36f4920a200335220" />
             </intent-filter>
         </activity>
 
