--- a/flutter/app/macos/Runner/Configs/AppInfo.xcconfig
+++ b/flutter/app/macos/Runner/Configs/AppInfo.xcconfig
@@ -12,3 +12,9 @@ PRODUCT_BUNDLE_IDENTIFIER = com.example.app
 
 // The copyright displayed in application information
 PRODUCT_COPYRIGHT = Copyright © 2025 com.example. All rights reserved.
+
+// macOS 배포 타겟 설정
+MACOSX_DEPLOYMENT_TARGET = 10.15
+
+// CocoaPods 설정 포함 (이 줄들 중 하나가 작동하는 것을 사용)
+#include "Pods/Target Support Files/Pods-Runner/Pods-Runner.debug.xcconfig"
