--- a/flutter/app/pubspec.yaml
+++ b/flutter/app/pubspec.yaml
@@ -32,7 +32,9 @@ dependencies:
     sdk: flutter
   google_fonts: ^6.1.0
   dio: ^5.4.0
-  kakao_flutter_sdk_user: ^1.6.1
+  kakao_flutter_sdk: ^1.9.6
+  kakao_flutter_sdk_user: ^1.9.6
+  kakao_flutter_sdk_auth: ^1.9.6
   google_sign_in: ^6.2.1
 
   # The following adds the Cupertino Icons font to your application.
@@ -45,6 +47,7 @@ dependencies:
   video_player: ^2.8.1
   share_plus: ^7.2.1
   youtube_player_flutter: ^9.0.3
+  url_launcher: ^6.3.1
 
 dev_dependencies:
   flutter_test:
