--- a/flutter/app/pubspec.yaml
+++ b/flutter/app/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   share_plus: ^7.2.1
   youtube_player_flutter: ^9.0.3
   url_launcher: ^6.3.1
+  http_parser: ^4.0.2
 
 dev_dependencies:
   flutter_test:
