--- a/spring_boot/build.gradle
+++ b/spring_boot/build.gradle
@@ -42,6 +42,14 @@ dependencies {
 	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
 	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
 	implementation 'com.fasterxml.jackson.core:jackson-databind'
+
+	// AWS S3 의존성 추가
+	implementation 'com.amazonaws:aws-java-sdk-s3:1.12.565'
+	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
+
+	// 파일 업로드 관련
+	implementation 'commons-fileupload:commons-fileupload:1.5'
+	implementation 'commons-io:commons-io:2.11.0'
 }
 
 tasks.named('test') {
