공유기능 만드는중

--- a/flutter/app/pubspec.yaml
+++ b/flutter/app/pubspec.yaml
@@ -36,15 +36,16 @@ dependencies:
   kakao_flutter_sdk_user: ^1.9.6
   kakao_flutter_sdk_auth: ^1.9.6
   google_sign_in: ^6.2.1
+  flutter_inappwebview: ^6.0.0
 
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   http: ^1.4.0
   image_picker: ^1.0.4
   shared_preferences: ^2.2.2
+  path_provider: ^2.1.1
   audioplayers: ^5.2.1
   video_player: ^2.8.1
+
   share_plus: ^7.2.1
   youtube_player_flutter: ^9.0.3
   url_launcher: ^6.3.1
@@ -74,6 +75,11 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/logo.png"
 
   # To add assets to your application, add an assets section, like this:
   # assets:
