--- a/flutter/app/pubspec.yaml
+++ b/flutter/app/pubspec.yaml
@@ -50,7 +50,7 @@ dependencies:
   youtube_player_flutter: ^9.0.3
   url_launcher: ^6.3.1
   http_parser: ^4.0.2
-  file_picker: ^6.1.1
+  file_picker: ^8.0.0+1
 
 dev_dependencies:
   flutter_test:
