--- a/python/requirements.txt
+++ b/python/requirements.txt
@@ -10,3 +10,16 @@ langchain==0.3.25
 langchain-community==0.3.24
 opencv_python_headless==4.11.0.86
 opencv_python==4.11.0.86
+Pillow==10.1.0
+numpy==1.24.3
+
+# 🎬 비디오 처리를 위한 추가 라이브러리
+moviepy==1.0.3
+imageio==2.31.1
+imageio-ffmpeg==0.4.9
+
+# 오디오 처리
+pydub==0.25.1
+
+# 이미지 처리
+opencv-python==4.8.1.78
