--- a/spring_boot/build.gradle
+++ b/spring_boot/build.gradle
@@ -42,6 +42,8 @@ dependencies {
 	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
 	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
 	implementation 'com.fasterxml.jackson.core:jackson-databind'
+	compileOnly 'javax.servlet:javax.servlet-api:4.0.1'
+
 
 	// AWS S3 의존성 추가
 	implementation 'com.amazonaws:aws-java-sdk-s3:1.12.565'
