--- a/flutter/app/pubspec.yaml
+++ b/flutter/app/pubspec.yaml
@@ -53,6 +53,8 @@ dependencies:
   file_picker: ^8.0.0+1
 
 dev_dependencies:
+  # 앱 아이콘
+  flutter_launcher_icons: ^0.13.1
   flutter_test:
     sdk: flutter
 
@@ -62,7 +64,12 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
-
+# 앱 아이콘 경로
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/icon.png"  # 아이콘 파일 경로
+  min_sdk_android: 21
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
@@ -76,10 +83,10 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
-flutter_icons:
-  android: "launcher_icon"
-  ios: true
-  image_path: "assets/logo.png"
+#flutter_icons:
+#  android: "launcher_icon"
+#  ios: true
+#  image_path: "assets/logo.png"
 
   # To add assets to your application, add an assets section, like this:
   # assets:
