Apply .gitignore changes

--- a/spring_boot/.gitignore
+++ b/spring_boot/.gitignore
@@ -40,3 +40,51 @@ out/
 !.env.example
 .vscode/
 **/application.yml
+
+########################################
+# ✅ Python
+########################################
+__pycache__/
+*.py[cod]
+*$py.class
+*.pyo
+*.pyd
+
+# 가상환경
+.venv/
+venv/
+env/
+ENV/
+*.egg-info/
+pip-log.txt
+pip-delete-this-directory.txt
+
+########################################
+# ✅ Flutter
+########################################
+.dart_tool/
+.packages
+.pub-cache/
+.pub/
+flutter_*.png
+
+# iOS/Android 캐시 및 바이너리
+*.lock
+ios/Pods/
+ios/Runner.xcworkspace/
+ios/DerivedData/
+android/.gradle/
+android/app/build/
+
+# Flutter 환경설정
+.flutter-plugins
+.flutter-plugins-dependencies
+.melos_tool/
+
+########################################
+# ✅ 공통 캐시 및 시스템
+########################################
+*.log
+*.tmp
+.DS_Store
+Thumbs.db
