--- a/flutter/app/GoogleService-Info.plist
+++ b/flutter/app/GoogleService-Info.plist
@@ -9,7 +9,7 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.example.app</string>
+	<string>com.fairytale.app</string>
 	<key>PROJECT_ID</key>
 	<string>fairytale-8e741</string>
 	<key>STORAGE_BUCKET</key>
